#
#   JPEG 2000 decoder library
#
#   Decoding, which uses OpenJPEG in C, runs in a sandbox, for safety.
#
#   Usable targets:
#   - native (on Linux)
#   - x86_64-pc-windows-gnu
#   - (MacOS pending)
#
[package]
name = "jpeg2000-decoder"
version = "0.2.0"
edition = "2021"
authors = ["John Nagle <nagle@animats.com>"]
license = "LGPL"
description = "JPEG 2000 image loader."
keywords = ["j2k", "jp2", "jpeg2000", "image"]
repository = "https://github.com/John-Nagle/jpeg2000-decoder"
homepage = "https://github.com/John-Nagle/jpeg2000-decoder"

[lib]
name = "jpeg2000_decoder"
path = "src/lib/lib.rs"

[[example]]
name = "jpeg2000_decoder"
path = "src/examples/jpeg2000_decoder/main.rs"

[dependencies]

#   The sandboxed decoder
jpeg2k-sandboxed = "0.6"

#   Images
#### image = "0.24.5" -- jpeg2k needs an older version.
image = "0.23.14"

#   Network
ureq = "2.6.2"

#   Misc.
anyhow = "1"
argparse = "0.2.2"
url = "2.3.1"
log = "0.4"
